--- a/proyecto1/css/estilos.css
+++ b/proyecto1/css/estilos.css
@@ -1,5 +1,6 @@
-body
+#body
 {
+    background: black;
     color: red
     text-align: center;
     font-family: "Arial";
@@ -7,15 +8,19 @@ body
     margin: 0;
     padding: 0;
 }
-
 #cabecera
 {
     background: burlywood;
-    box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
-    margin: 0;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 #tagline #cabecera
 {
@@ -34,4 +39,9 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    background: white;
+    padding: 1em;
 }
