--- a/proyecto1/css/estilos.css
+++ b/proyecto1/css/estilos.css
@@ -23,6 +23,7 @@ body
     font-weight: normal;
     font-size: 0.8em;
 }
+#container
 {
     width: 70%;
     padding: 0;
@@ -34,4 +35,15 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    padding: 1em;
+}
+#fooder
+{
+    background: #777;
+    color:white;
+    text-align: center;
+    padding: 0.5em;
 }
